--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,10 @@ spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 server.tomcat.uri-encoding=UTF-8
+
+#mongo
+#spring.data.mongodb.uri=mongodb://user:pwd@ip1:port1,ip2:port2/database
+spring.data.mongodb.uri=mongodb://47.94.98.20:27017/test
+#spring.data.mongodb.host=47.94.98.20
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=test
